<resources>
    <string name="app_name">JavaScouting2</string>
    <string name="title_scouting">Scouting</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_analysis">Analysis</string>
    <string name="team_name">Team Name</string>
    <string name="team_number">Team Number</string>
    <string name="finish">Finish</string>
    <string name="title">Java Scouting 2</string>
    <string name="can_they_land">Can they land?</string>
    <string name="can_they_sample">Can they sample?</string>
    <string name="can_they_claim">Can they claim?</string>
    <string name="can_they_park">Can they park?</string>
    <string name="tele_op">Tele-Op</string>
    <string name="minerals_in_depot">Minerals in Depot</string>
    <string name="minerals_in_lander">Minerals in Lander</string>
    <string name="can_they_latch">Can they latch?</string>
    <string name="endgame">Endgame</string>
    <string name="reset_dialog">You are currently adding a team. If you switch to schedule, your current filled information will be reset.</string>
    <string name="proceed">Proceed?</string>
    <string name="yes">Yes</string>
    <string name="there_are_no_teams">There are no teams.</string>
    <string name="delete_all_teams">Delete All Teams</string>
    <string name="delete_all_matches">Delete All Matches</string>
    <string name="settings">Settings</string>
    <string name="do_delete">Deleting all the teams will delete all the teams. Maybe export before you do this? Continue?</string>
    <string name="do_delete2">Deleting all the matches will, indeed, delete all the teams. Maybe export before you do this? Continue?</string>
    <string name="delete_header">Delete Teams</string>
    <string name="delete_header2">Delete Team</string>
    <string name="delete_header3">Delete Match</string>
    <string name="delete_matches">Delete Matches</string>
    <string name="no">No</string>
    <string name="question_land">Can land?</string>
    <string name="question_sample">Can sample?</string>
    <string name="question_claim">Can claim?</string>
    <string name="question_park">Can park?</string>
    <string name="question_depot">Minerals in depot:</string>
    <string name="question_lander">Minerals in lander:</string>
    <string name="question_latch">Can latch?</string>
    <string name="question_endpark">Can park?</string>
    <string name="no_matches">There are no matches.</string>
    <string name="red_team_1">Red Team 1</string>
    <string name="red_team_2">Red Team 2</string>
    <string name="blue_team_1">Blue Team 1</string>
    <string name="blue_team_2">Blue Team 2</string>
    <string name="add_1_pleasae">Please add at least 4 teams.</string>
    <string name="done_adding_data_begin_analysis">Perform analysis?</string>
    <string name="add_some_teams">Please add some teams!</string>
    <string name="ff">API level is not high enough to sort!</string>
    <string name="scouted_data">Scouted Data</string>
    <string name="scouting_data">Scouting Data</string>
    <string name="save">Save</string>
    <string name="blue_scores">Blue Scores</string>
    <string name="autonomous">Autonomous</string>
    <string name="red_scores">Red Scores</string>
    <string name="results">Results</string>
    <string name="delete_team">Delete Team</string>
    <string name="delete_match">Delete Match</string>
    <string name="do_delete23">The team will be lost permanently if you delete it. Continue?</string>
    <string name="do_delete34">The match will be lost permanently if you delete it. Continue?</string>
    <string name="export_teams">Export Teams</string>
    <string name="export_matches">Export Matches</string>
    <string name="do_export">The resulting csv file will be located in the downloads folder. It can be loaded into a viewer or be sent and imported into the app. Continue?</string>
    <string name="import_teams">Import Teams</string>
    <string name="import_matches">Import Matches</string>

</resources>
